create github pages

--- a/benchmarks-continous-improvement.html
+++ b/benchmarks-continous-improvement.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-section article content1 cid-s7xIWg5WwM" id="content1-l">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section article content1 cid-s7xIWg5WwM" id="content1-l">
     
      
 
@@ -89,47 +89,25 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8">As they go through the Responsible 100 process, businesses benefit themselves while contributing to mapping the pathways towards ever greater sustainability. 
-<div>
-</div><div>Positive feedback loops enable businesses to benefit the scorecards, and the scorecards to continually evolve as pools of shared knowledge and best practices, to the benefit of all. 
-</div><div>
-</div><div>As more businesses assess against continually improving scorecards, our shared knowledge as to POOR, OKAY, GOOD and EXCELLENT policies and practices increases. 
-</div><div>
-</div><div>Together, better versions of GOOD and EXCELLENT are imagined, enacted and iterated, and in turn captured in the scorecards. As such, and given the tendency or business to always seek improvements, there is a relentless upward drift toward better and best practices.  
-</div><div><strong>
-</strong></div><div><strong><br></strong></div><div><strong>Knowledge Sharing
-</strong></div><div><strong>
-</strong></div><div>Via the 57 in-the-flesh roundtables Responsible 100 convened pre-pandemic, and the virtual and digital versions we’ve created since, we’ve provided numerous opportunities for businesses to learn from other executives and practitioners from peer organisations, and from experts from civil society. 
-</div><div>
-</div><div>We create safe spaces and collaborative and supportive environments in which to share knowledge. Together, we’ve made thousands of connections, built relationships and grown a network. And we’ve co-created and improved responsibility performance across scores of critical issues.  
-</div><div><strong>
-</strong></div><div>Exploring and sharing the collective intelligence around the table (actual or virtual) results in a deeper understanding of responsibility issues under examination, how they impact different organisations, and what people on the ground need to be willing - and able - to respond well and make progress. 
-</div><div>
-</div><div>Exploration sparks our imaginations. It leads to breakthrough ideas and inspires innovation. Appreciating what really matters most and what makes the most difference is crucial. But so too is learning from instances when, despite best efforts, little or no difference has been made, or when a business has simply failed to find alternatives to POOR practices. 
-</div><div>
-</div><div>Knowledge sharing requires the socialising of challenges, and identifying and prioritising ideas with the greatest potential to create real change. Working together, identifying opportunities and co-creating and trialling solutions has proved to be highly productive and stimulating work.  
-</div><div><strong>
-</strong></div><div><strong>Responsibility as a Skill
-</strong></div><div><strong>
-</strong></div><div>We sense that a new paradigm in business is at hand. Responsible 100 is for all those organisations and people who sense this and want it too. 
-</div><div>
-</div><div>Our aim is to equip and empower businesses to lead this shift. And to enable those at the vanguard of the coming economic transformation to stand out irresistibly to customers, employees and investors alike. 
-</div><div>
-</div><div>We have a concept of responsibility as a skill, or as a state of being. It alludes to actively being something better. Of working hard at it. Of helping to build and be part of a better economic system. Rather than just hoping or expecting everything will sort itself out somehow. 
-</div><div>
-</div><div>But it is also a skill businesses can develop, widen and improve. With practice and experience, our skill levels increase. We become able to do more things, and see new opportunities and ways of doing things. We can go farther, faster, and our confidence grows with our willingness to experiment and risk trying something new or entirely contrary to conventions. 
-</div><div>
-</div><div>Irrespective of its starting point, we help any business to identify the social and environmental issues which are most relevant and critical right now. Responsibility as a skill may well start with addressing just a handful of issues and working out how to transition from POOR to OKAY on those. 
-</div><div>
-</div><div>But over time, capacity to assess against a wider range of issues, and to progress from POOR to OKAY to GOOD and possible to EXCELLENT, increases.   
-</div><div>
-</div><div>Responsibility as a skill includes activating co-created innovative interventions - or simply implementing changes that have worked in other businesses - to make progress against given social and environmental challenges. 
-</div><div>
-</div><div>It includes a collective commitment to working in partnership to develop, prototype, test and evaluate the best ideas. And to share the learning from these ‘experiments’ to further develop our collective understanding of what needs to be done, and how, and with whom. 
-</div><div>
-</div><div>Responsibility as a skill alludes to investing 98% of your company’s resources and effort into delivering the right goods and services, at the right price and time, at the right price and quality, to the best of its ability. 
-</div><div>
-</div><div>But investing the remaining 2%, through an efficient, effective, supported, networked process, to increase your positive impacts on people and planet, and decrease your negative impacts. Systematically, relentlessly, as far and wide across your spheres of influence as possible.</div></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>As they go through the Responsible 100 process, businesses benefit themselves while contributing to mapping the pathways towards ever greater sustainability.</p><p>Positive feedback loops enable businesses to benefit the scorecards, and the scorecards to continually evolve as pools of shared knowledge and best practices, to the benefit of all.</p><p><span style="font-size: 1rem;">As more businesses assess against continually improving scorecards, our shared knowledge as to POOR, OKAY, GOOD and EXCELLENT policies and practices increases. &nbsp;</span><br></p><p>
+<span style="font-size: 1rem;">Together, better versions of GOOD and EXCELLENT are imagined, enacted and iterated, and in turn captured in the scorecards. As such, and given the tendency or business to always seek improvements, there is a relentless upward drift toward better and best practices. &nbsp;</span></p><p>
+</p><p><span style="font-size: 1rem;"><strong>Knowledge Sharing&nbsp;</strong></span></p><p>
+<span style="font-size: 1rem;">Via the 57 in-the-flesh roundtables Responsible 100 convened pre-pandemic, and the virtual and digital versions we’ve created since, we’ve provided numerous opportunities for businesses to learn from other executives and practitioners from peer organisations, and from experts from civil society. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">We create safe spaces and collaborative and supportive environments in which to share knowledge. Together, we’ve made thousands of connections, built relationships and grown a network. And we’ve co-created and improved responsibility performance across scores of critical issues. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Exploring and sharing the collective intelligence around the table (actual or virtual) results in a deeper understanding of responsibility issues under examination, how they impact different organisations, and what people on the ground need to be willing - and able - to respond well and make progress. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Exploration sparks our imaginations. It leads to breakthrough ideas and inspires innovation. Appreciating what really matters most and what makes the most difference is crucial. But so too is learning from instances when, despite best efforts, little or no difference has been made, or when a business has simply failed to find alternatives to POOR practices. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Knowledge sharing requires the socialising of challenges, and identifying and prioritising ideas with the greatest potential to create real change. Working together, identifying opportunities and co-creating and trialling solutions has proved to be highly productive and stimulating work. </span></p><p><span style="font-size: 1rem;">&nbsp;&nbsp;</span></p><p><strong>
+<span style="font-size: 1rem;">Responsibility as a Skill&nbsp;</span></strong></p><p>
+<span style="font-size: 1rem;">We sense that a new paradigm in business is at hand. Responsible 100 is for all those organisations and people who sense this and want it too. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Our aim is to equip and empower businesses to lead this shift. And to enable those at the vanguard of the coming economic transformation to stand out irresistibly to customers, employees and investors alike. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">We have a concept of responsibility as a skill, or as a state of being. It alludes to actively being something better. Of working hard at it. Of helping to build and be part of a better economic system. Rather than just hoping or expecting everything will sort itself out somehow. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">But it is also a skill businesses can develop, widen and improve. With practice and experience, our skill levels increase. We become able to do more things, and see new opportunities and ways of doing things. We can go farther, faster, and our confidence grows with our willingness to experiment and risk trying something new or entirely contrary to conventions. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Irrespective of its starting point, we help any business to identify the social and environmental issues which are most relevant and critical right now. Responsibility as a skill may well start with addressing just a handful of issues and working out how to transition from POOR to OKAY on those. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">But over time, capacity to assess against a wider range of issues, and to progress from POOR to OKAY to GOOD and possible to EXCELLENT, increases. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Responsibility as a skill includes activating co-created innovative interventions - or simply implementing changes that have worked in other businesses - to make progress against given social and environmental challenges. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">It includes a collective commitment to working in partnership to develop, prototype, test and evaluate the best ideas. And to share the learning from these ‘experiments’ to further develop our collective understanding of what needs to be done, and how, and with whom. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">Responsibility as a skill alludes to investing 98% of your company’s resources and effort into delivering the right goods and services, at the right price and time, at the right price and quality, to the best of its ability. &nbsp;</span></p><p>
+<span style="font-size: 1rem;">But investing the remaining 2%, through an efficient, effective, supported, networked process, to increase your positive impacts on people and planet, and decrease your negative impacts. Systematically, relentlessly, as far and wide across your spheres of influence as possible.</span></p></div>
         </div>
     </div>
 </section>
