create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="cid-s7xj9Qi95q" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-s7xj9Qi95q" id="header2-1">
 
     
 
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">Responsible 100 is at the cutting edge of efforts to&nbsp;<a href="https://twitter.com/search?q=buildbackbetter" target="_blank">#buildbackbetter</a></h3>
+                
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">STAY UP TO DATE...</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
@@ -118,11 +118,11 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-target"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-2">58</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-2"><a href="benchmarks-about.html">58</a></h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                    <br>Critical issues dissected</h4>
+                                    <br><a href="benchmarks-about.html">Critical issues dissected</a></h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"><br>We explore the critical social, environmental and ethical issues affecting business and wider society.</p>
                             </div>
                         </div>
@@ -131,10 +131,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-setting"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-2">57</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-2"><a href="services-WhatWeDo.html#bottom">57</a></h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br>Unique roundtable</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br><a href="services-WhatWeDo.html#bottom">Unique roundtable</a></h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"><br>We convene world-class roundtable meetings which bring businesses and stakeholders together.</p>
                             </div>
                         </div>
@@ -143,11 +143,11 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-flag"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-2">548</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-2"><a href="benchmarks-case-studies.html">548</a></h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                    <br>Organisations represented</h4>
+                                    <br><a href="benchmarks-case-studies.html">Organisations represented</a></h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"><br>Many of the world's biggest and best known brands, corporations and NGOs have supported and co-created our unique approach.</p>
                             </div>
                         </div>
@@ -156,10 +156,10 @@
                         <div class="panel-item p-3">
                             <div class="card-img pb-3">
                                 <span class="mbr-iconfont pr-2 mbri-users"></span>
-                                <h3 class="count py-3 mbr-fonts-style display-2">757</h3>
+                                <h3 class="count py-3 mbr-fonts-style display-2"><a href="peoples-assembly-consensus.html">757</a></h3>
                             </div>
                             <div class="card-texts">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br>Passionate people</h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br><a href="peoples-assembly-consensus.html">Passionate people</a></h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"><br>Our roundtables have brought hundreds of passionate people together to co-create and innovate for the public good.</p>
                             </div>
                         </div>
