create github pages

--- a/about-mission.html
+++ b/about-mission.html
@@ -56,21 +56,21 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section article content1 cid-s7xk2W4d6W" id="content1-6">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section article content1 cid-s7xk2W4d6W" id="content1-6">
     
      
 
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>We are on a mission…
-</strong><strong></strong></p><p>Responsible 100's mission is to make real responsibility the profit-maximising choice for any business.
+</strong><strong></strong></p><p>Responsible 100's mission is to make real responsibility the profit-maximising choice for any business.</p><p><br></p><p>
 </p><p>
-<strong>Change or Be Changed&nbsp;</strong></p><p><span style="font-size: 1rem;">We have a choice. Two paths lay ahead of us. One is perilous, the other full of promise. One leads us to climate change, and eventual ecological and societal collapse. The other requires systemic change, and leads us to a healthy, prosperous future. &nbsp;</span><br></p><p><span style="font-size: 1rem;">It is a simple choice: change or be changed. The first path – be changed – is the path we are on today. The ideas and assumptions that have given us so much prosperity to date are failing us.&nbsp;</span><br></p><p><span style="font-size: 1rem;">If we continue with them, if we don’t take responsibility for their failure, our prosperity will not last. If we want a prosperous future for ourselves, our families and our descendents, then we need to choose to change, now.</span><strong></strong></p><p><strong>Take Responsibility, Rescue Prosperity
+<strong>Change or Be Changed&nbsp;</strong></p><p><span style="font-size: 1rem;">We have a choice. Two paths lay ahead of us. One is perilous, the other full of promise. One leads us to climate change, and eventual ecological and societal collapse. The other requires systemic change, and leads us to a healthy, prosperous future. &nbsp;</span><br></p><p><span style="font-size: 1rem;">It is a simple choice: change or be changed. The first path – be changed – is the path we are on today. The ideas and assumptions that have given us so much prosperity to date are failing us.&nbsp;</span><br></p><p><span style="font-size: 1rem;">If we continue with them, if we don’t take responsibility for their failure, our prosperity will not last. If we want a prosperous future for ourselves, our families and our descendents, then we need to choose to change, now.</span></p><p><span style="font-size: 1rem;"><br></span><strong></strong></p><p><strong>Take Responsibility, Rescue Prosperity
 </strong></p><p>
 <span style="font-size: 1rem;">Choices like this are rare. The chance to shift and accelerate the direction of human progress, to rescue us from the jaws of failure, to define a new era of prosperity for all. That is a once in a lifetime opportunity.&nbsp;</span></p><p><span style="font-size: 1rem;">We need to take responsibility for this choice. Choosing to change means choosing to act responsibly. To choose the path of promise, of profit, of prosperity, we must be responsible. &nbsp;</span><br></p><p><span style="font-size: 1rem;">We know we must act.&nbsp;</span><br></p><p><span style="font-size: 1rem;">We know we must uncover exactly what changes to make and how to make them to create and be part of the future we know in our hearts is possible.&nbsp;</span><br></p><p>
-<span style="font-size: 1rem;">We know we can do it.&nbsp;</span></p><p><strong>
+<span style="font-size: 1rem;">We know we can do it.&nbsp;</span></p><p><span style="font-size: 1rem;"><br></span></p><p><strong>
 </strong><strong>Embracing Change, Continuously Improving&nbsp;</strong></p><p><span style="font-size: 1rem;">Responsible 100 is for all businesses that choose change, and welcome help to do it.&nbsp;</span><br></p><p><span style="font-size: 1rem;">We help any business - no matter its size, sector or starting point - to better understand, control and direct its responsibility performance and impacts.&nbsp;</span><br></p><p>
-<span style="font-size: 1rem;">We support businesses in a process of continuous improvement.&nbsp;</span></p><p><span style="font-size: 1rem;">We help businesses realise their untapped potential to make the world a better place, and steer us towards a fair, livable and sustainable future. And to benefit themselves, and everyone else, on that journey as well in reaching our destination.&nbsp;</span><br></p><p><strong><br></strong></p></div>
+<span style="font-size: 1rem;">We support businesses in a process of continuous improvement.&nbsp;</span></p><p><span style="font-size: 1rem;">We help businesses realise their untapped potential to make the world a better place, and steer us towards a fair, livable and sustainable future. And to benefit themselves, and everyone else, on that journey as well in reaching our destination.</span></p></div>
         </div>
     </div>
 </section>
