create github pages

--- a/services-WhatWeDo.html
+++ b/services-WhatWeDo.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section article content1 cid-s7xyJohRyD" id="content1-c">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article content1 cid-s7xyJohRyD" id="content1-c">
     
      
 
@@ -65,7 +65,7 @@
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Our Process
 </strong></p><p>
 <span style="font-size: 1rem;">Responsible 100 helps all businesses to better understand the sustainability and responsibility issues they face. We help assess current performance, determine which practices to change and improve, and how. &nbsp;</span></p><p><span style="font-size: 1rem;">Responsible 100 helps any business to: &nbsp;</span><br></p><p><span style="font-size: 1rem;">&gt;&gt; Clearly identify and better understand the various sustainability and responsibility issues which affect it, and which it affects&nbsp;</span><br></p><p><span style="font-size: 1rem;">&gt;&gt; Identify the issues which matter most, and those where they have the greatest opportunity to positively impact people and planet &nbsp;</span><br></p><p><span style="font-size: 1rem;">&gt;&gt; Map out the possible pathways for achieving better social and environmental practices and outcomes&nbsp;</span><br></p><p><span style="font-size: 1rem;">&gt;&gt; Measure and monitor progress using open-sourced performance benchmarks&nbsp;</span><br></p><p><span style="font-size: 1rem;">&gt;&gt; Report internally and externally&nbsp;</span><br></p><p>
-<span style="font-size: 1rem;">Responsible 100 also supports businesses through every step and in making changes and improvements to their practices.&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Responsible 100 also supports businesses through every step and in making changes and improvements to their practices.&nbsp;</span></p><p><span style="font-size: 1rem;"><br></span></p><p>
 </p><p><span style="font-size: 1rem;"><strong>How it Works &nbsp;</strong></span></p><p>
 <span style="font-size: 1rem;">Where a business starts in the Responsible 100 process depends on its size and sector. Visit the Corp and SMEs pages for more information.&nbsp;</span></p><p>
 <span style="font-size: 1rem;">There are 4 key steps in Responsible 100’s supported process:</span></p></div>
@@ -180,59 +180,58 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><strong>Responsible 100:
-</strong><div><strong>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Responsible 100:</strong></p><p><strong>
+</strong></p><div><strong>
 </strong></div><div>&gt;&gt; Helps your company to prioritise key issues to focus in on, improve and innovate around
 </div><div>
-</div><div>&gt;&gt; Supports in creating and/or acting upon improvement plans (including plan writing, project management, workshops, and consultancy)
+</div><div><br></div><div>&gt;&gt; Supports in creating and/or acting upon improvement plans (including plan writing, project management, workshops, and consultancy)
 </div><div>
-</div><div>&gt;&gt; Enables the measurement, monitoring and visualisation of your company's performance and progress over time
+</div><div><br></div><div>&gt;&gt; Enables the measurement, monitoring and visualisation of your company's performance and progress over time
 </div><div>
-</div><div>&gt;&gt; Provides excellent ways to report and to visualise progress and related data
+</div><div><br></div><div>&gt;&gt; Provides excellent ways to report and to visualise progress and related data
 </div><div>
-</div><div>&gt;&gt; Supports your business with every step
+</div><div><br></div><div>&gt;&gt; Supports your business with every step
 </div><div><strong>
-</strong></div><div><strong><br></strong></div><div><strong><br></strong></div><div><strong>The R100 Badge 
+</strong></div><div><strong><br></strong></div><div><strong><br></strong></div><div><strong>The R100 Badge</strong></div><div><strong><br></strong></div><div><strong> 
 </strong></div><div><strong>
-</strong></div><div>Businesses that actively and continually seek to balance their pursuit of profit and business excellence, with the needs of people and planet, need due recognition and support.
+</strong></div><div>Businesses that actively and continually seek to balance their pursuit of profit and business excellence, with the needs of people and planet, need due recognition and support.</div><div><br></div><div>
 </div><div>
-</div><div>By providing real choice for consumers, employees and investors who want to help create and be part of a better kind of business, we create economic reward for pursuing real responsibility. As well as creating the critical economic incentives for other businesses to follow suit. 
+</div><div>By providing real choice for consumers, employees and investors who want to help create and be part of a better kind of business, we create economic reward for pursuing real responsibility. As well as creating the critical economic incentives for other businesses to follow suit.</div><div><br></div><div> 
 </div><div>
-</div><div>By connecting the businesses that are best for the world with all those people who wish to see them succeed, we can make real responsibility an increasingly powerful driver of business success. 
+</div><div>By connecting the businesses that are best for the world with all those people who wish to see them succeed, we can make real responsibility an increasingly powerful driver of business success.</div><div><br></div><div> 
 </div><div>
 </div><div>Responsible 100 is exploring various ways in which participating businesses can publicise their participation. A badge or kitemark, alongside the provision of statements of commitment to critical issues, in the form of assets for publication are a distinct possibility.  
 </div><div>
-</div><div><br></div><div><br></div><div><strong>Roundtables
+</div><div><br></div><div><br></div><div><strong>Roundtables</strong></div><div><strong><br></strong></div><div><strong>
 </strong></div><div><strong>
-</strong></div><div>Responsible 100’s unique collaborative approach to business responsibility is rooted in efforts to bring a wide range of actors and critical friends together. Namely, businesses and their various stakeholders. 
+</strong></div><div>Responsible 100’s unique collaborative approach to business responsibility is rooted in efforts to bring a wide range of actors and critical friends together. Namely, businesses and their various stakeholders.</div><div><br></div><div> 
 </div><div>
-</div><div>We held our first roundtable peer review in 2013 and convened a total of 57 over the following five years.  
+</div><div>We held our first roundtable peer review in 2013 and convened a total of 57 over the following five years.</div><div><br></div><div>  
 </div><div>
-</div><div>These roundtable events brought people together, face to face, in ways that are not possible today. But through the smart use of technology and process design we’ll continue to enable many of the good things to continue to happen. That is to:   
+</div><div>These roundtable events brought people together, face to face, in ways that are not possible today. But through the smart use of technology and process design we’ll continue to enable many of the good things to continue to happen. That is to:</div><div><br></div><div>   
 </div><div>
 </div><div>&gt;&gt; Discuss and debate a wide range of social, environmental, ethical and governance issues 
 </div><div>
-</div><div>&gt;&gt; Bring together diverse groups of individuals - including business practitioners, trade bodies, campaigners and NGOs, academics and government
+</div><div><br></div><div><span style="font-size: 1rem;">&gt;&gt; Bring together diverse groups of individuals - including business practitioners, trade bodies, campaigners and NGOs, academics and government</span><br></div><div>
+</div><div><br></div><div>&gt;&gt; Enable frank, constructive dialogue on the responsibility issues affecting business and wider society
 </div><div>
-</div><div>&gt;&gt; Enable frank, constructive dialogue on the responsibility issues affecting business and wider society
+</div><div><br></div><div>&gt;&gt; Focus on collaboration and co-creation
 </div><div>
-</div><div>&gt;&gt; Focus on collaboration and co-creation
+</div><div><br></div><div>&gt;&gt; Learn from experts and practitioners alike - people who share a passion for the issues under examination and on continuously improving policies and practices to address them
 </div><div>
-</div><div>&gt;&gt; Learn from experts and practitioners alike - people who share a passion for the issues under examination and on continuously improving policies and practices to address them
+</div><div><br></div><div>&gt;&gt; Share and activate knowledge and views as to latest thinking, expertise and developments
 </div><div>
-</div><div>&gt;&gt; Share and activate knowledge and views as to latest thinking, expertise and developments
+</div><div><br></div><div>&gt;&gt; Network with peers, experts, practitioners and those affected by the actions (and sometimes inactions) of business
 </div><div>
-</div><div>&gt;&gt; Network with peers, experts, practitioners and those affected by the actions (and sometimes inactions) of business
+</div><div><br></div><div>&gt;&gt; Discuss latest best practices and latest thinking, innovations, likely directions of travel, and more.
 </div><div>
-</div><div>&gt;&gt; Discuss latest best practices and latest thinking, innovations, likely directions of travel, and more.
+</div><div><br></div><div>&gt;&gt; Generate new ideas and innovations, and practical changes that you can make in your business to improve
 </div><div>
-</div><div>&gt;&gt; Generate new ideas and innovations, and practical changes that you can make in your business to improve
+</div><div><br></div><div>&gt;&gt; Deploy imagination as a driver of business excellence
 </div><div>
-</div><div>&gt;&gt; Deploy imagination as a driver of business excellence
+</div><div><br></div><div>&gt;&gt; Contribute to a deeper understanding as to good, better and best practices on any given issue
 </div><div>
-</div><div>&gt;&gt; Contribute to a deeper understanding as to good, better and best practices on any given issue
-</div><div>
-</div><div><strong><br></strong></div></div>
+</div><div><strong><br></strong></div><p></p></div>
         </div>
     </div>
 </section>
